Add Person constructors and mappings